// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime renders with additional HTML attributes 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
    id="date-time-id"
  >
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      Mock Date 
    </time>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with children 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      2 years ago 
    </time>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      Mock Date 
    </time>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-inline: 30px;
  padding-inline: 30px;
}

.emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Updated: 
    </span>
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      Mock Date, 
    </time>
    <span
      class="emotion-1"
    >
      , The Times
    </span>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with overrides 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

.emotion-2 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-2:before,
.emotion-2:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Updated: 
    </span>
    <time
      class="emotion-2"
      datetime="Mock Date"
    >
      Mock Date, 
    </time>
    <span
      class="emotion-1"
    >
      , The Times
    </span>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with provided date, format, prefix and suffix 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Updated:  
    </span>
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      Mock Date, 
    </time>
    <span
      class="emotion-1"
    >
      , The Times
    </span>
  </span>
</DocumentFragment>
`;

exports[`DateTime renders with timestamp 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1 svg {
  fill: #6A6A6A;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<span
    class="emotion-0"
  >
    <time
      class="emotion-1"
      datetime="Mock Date"
    >
      Mock Date 
    </time>
  </span>
</DocumentFragment>
`;
